--- a/src/css/main.css
+++ b/src/css/main.css
@@ -75,6 +75,31 @@ a {
 
 #play-btn {
   float: right;
-  margin-top: 1%;
-  margin-right: 1%;
+  margin-top: 16px;
+  margin-right: 16px;
+
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  background-color: transparent;
+  border-radius: 0.25rem;
+  border: 1px solid #6c757d;
+  color: #6c757d;
+  cursor: pointer;
+  display: inline-block;
+  font-family: ;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  padding: 0.375rem 0.75rem;
+  text-align: center;
+  text-decoration: none;
+  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+  user-select: none;
+  vertical-align: middle;
+}
+
+#play-btn:hover {
+  background-color: #6c757d;
+  border-color: #6c757d;
+  color: #fff;
 }
